--- a/client/topmate-readme-badge/package.json
+++ b/client/topmate-readme-badge/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-github-btn": "^1.4.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
     "react-syntax-highlighter": "^15.5.0",
+    "react-use": "^17.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
